# MATE2018

./: .clang-format  .gitignore  .gitmodules  .travis.yml  CMakeLists.txt  README.md  data.csv  dive_comp.py
common/: CMakeLists.txt
common/include/: test.h
common/include/common/: xcvserialize.hpp  xmath.h  xmath.hpp  xnet.h  xnet.hpp
common/include/common_wip/: xnetmaster.hpp  xnetserv.hpp  xnetslave.hpp
common/src/: test.cpp  touch.cpp
common/test/: xmath_ops.cpp  xnet_create.cpp
master/: CMakeLists.txt  README.md
master/GUI/: CMakeLists.txt  dive_comp.py
master/csuite/: CMakeLists.txt
master/csuite/src/: MainWindow.cpp  MainWindow.hpp  main.cpp  qt_csuite.cpp  qt_csuite.hpp
master/csys/: CMakeLists.txt
master/csys/include/: calc.h  calc.hpp  net.h  vec.h  xdrvlib.h  xnet.h
master/csys/src/: calc.cpp  main.cpp  net.cpp  vec.cpp  xapp.c  xapp.cpp  xdrvlib.c  xdrvlib.cpp  xnet.cpp
master/csys/test/: vec_ops.cpp
master/test/: CMakeLists.txt  xcube  xvalue
master/test/img_recv/: CMakeLists.txt
master/test/img_recv/include/: net.h
master/test/img_recv/src/: main.cpp
master/test/thrust_sim/: CMakeLists.txt  main.cpp
master/xdev/src/: xapp.c
slave/: CMakeLists.txt  motorArming.py
slave/navio/: CMakeLists.txt  README.md  _Makefile  main.cpp  navio
slave/navio/C++/Examples/AccelGyroMag/: AccelGyroMag
slave/navio/Python/: imu_data.py
slave/navio/_repo/C++/Examples/ADC/: ADC
slave/navio/_repo/C++/Examples/AHRS/: AHRS
slave/navio/_repo/C++/Examples/Barometer/: Barometer
slave/navio/_repo/C++/Examples/FRAM/: FRAM
slave/navio/_repo/C++/Examples/GPS/: gps
slave/navio/_repo/C++/Examples/LED/: LED
slave/navio/_repo/C++/Examples/Multithread/: threaded_baro
slave/navio/_repo/C++/Examples/RCInput/: RCInput
slave/navio/_repo/C++/Examples/Servo/: Servo  Servo.cpp
slave/navio/_repo/Python/: 10Hz.txt  Servo.py
slave/navio/include/: camera.h  camera.hpp  net.h  ports.h  ports.hpp  sub.h  sub.hpp
slave/navio/src/: main.cpp
slave/rpi0/: README.md
slave/rpi3/: README.md
template-matching-ocr/: ocr_template_match.py
tesseract/: ocr.py
test/thrust_sim/: CMakeLists.txt  main.cpp  thrust_sim
wip/: CMakeLists.txt  recv.cpp  serv.cpp  xnetmaster.cpp  xnetslave.cpp
